[package]
name = "rusty_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"  # Use the version that suits your needs
env_logger = "0.9.0"

[[bin]]
name = "rusty_web"
path = "src/main.rs"
